# recall

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
deploy/: dex.yaml
docs/concept/: agentic-mem.md  competitive-positioning.md  good-mem.md  requirements.md
docs/design/agentic-memory/: 00-overview.md  01-context.md  02-architecture.md  03-sequences.md  (+9 more)
docs/runbooks/: recall-containers.md
docs/spec/: phase-1-analysis.md  phase-2-architecture.md  phase-3-components.md  phase-4-cross-cutting.md  phase-5-playbook.md  phase-6-audit.md
docs/wip/: backlog.md
migrations/: 0001_init.down.surql  0001_init.up.surql
src/: config.rs  error.rs  lib.rs  main.rs  shutdown.rs
src/api/: envelope.rs  health.rs  mod.rs  openapi.rs  ratelimit.rs  v1.rs
src/auth/: cache.rs  jwks.rs  mod.rs
src/freshness/: mod.rs  tests.rs
src/maintenance/: mod.rs  tests.rs
src/mcp/: main.rs  mod.rs
src/obs/: log.rs  metrics.rs  mod.rs  trace.rs
src/providers/: mod.rs
src/queue/: mod.rs
src/retrieval/: mod.rs  tests.rs
src/service/: mod.rs
src/store/: convert.rs  migrate.rs  mod.rs
src/types/: api.rs  domain.rs  envelope.rs  job.rs  mod.rs  ports.rs  scope.rs
src/write_pipeline/: mod.rs  tests.rs
tests/: bdd.rs  container.rs  mcp.rs  store_remote.rs
tests/features/: api_edge.feature  auth_scope.feature  boot.feature  freshness.feature  maintenance.feature  memory_store.feature  retrieval.feature  system.feature  work_queue.feature  write_pipeline.feature
tests/support/: dex.rs  issuer.rs  mod.rs
(+20 files in other folders)
